--- a/assets/stylesheets/calculator.css
+++ b/assets/stylesheets/calculator.css
@@ -4,6 +4,7 @@ body {
   background: linear-gradient(to left, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 100%;
 }
 
 .container {
@@ -11,10 +12,6 @@ body {
   height: auto;
   padding-top: 75px;
   margin: 0 auto;
-}
-
-h1 {
-  font-size: 4vw;
 }
 
 table {
@@ -32,6 +29,12 @@ th.equivalency {
   /* animation: pulse 1.5s infinite; */
 }
 
+@keyframes pulse {
+  0%   {-webkit-transform: scale(1.25, 1.25);}
+  50%  {-webkit-transform: scale(0.75, 0.75);}
+  100% {-webkit-transform: scale(1.25, 1.25);}
+}
+
 th.hourly {
   width: 45%;
 }
@@ -40,27 +43,16 @@ output.headlineOutput {
   color: #00ff00;
 }
 
-
-
-
-
-
-
-
-
-img.increment, img.decrement {
-  height: 3vw;
-  /* width: 3vw; */
+table.assumptions {
+  padding-top: 5%;
 }
 
-h2 {
-  font-size: 3vw;
+th.assumptions-header {
+  color: gold;
 }
 
-@keyframes pulse {
-  0%   {-webkit-transform: scale(1.25, 1.25);}
-  50%  {-webkit-transform: scale(0.75, 0.75);}
-  100% {-webkit-transform: scale(1.25, 1.25);}
+output.assumption-data, input.assumption-data {
+  vertical-align: middle;
 }
 
 /*! rangeslider.js - v2.3.0 | (c) 2016 @andreruffert | MIT license | https://github.com/andreruffert/rangeslider.js */
@@ -174,4 +166,9 @@ input[type="range"]:focus + .rangeslider .rangeslider__handle {
   -moz-box-shadow: 0 0 8px rgba(255, 0, 255, 0.9);
   -webkit-box-shadow: 0 0 8px rgba(255, 0, 255, 0.9);
   box-shadow: 0 0 8px rgba(255, 0, 255, 0.9);
+}
+
+@media only screen and (min-width: 1100px) {
+  body { font-size:200%; }
+  .wrap { max-width:770px; }
 }
