--- a/assets/stylesheets/calculator.css
+++ b/assets/stylesheets/calculator.css
@@ -83,6 +83,72 @@ output.currency::before {
   content:"$"
 }
 
+
+#leftSlider {
+    position: inherit;
+    transform: translateX(-150%);
+    -webkit-transform: translateX(-150%);
+}
+
+td#annualOutput {
+    position: inherit;
+    transform: translateX(-150%);
+    -webkit-transform: translateX(-150%);
+    animation-delay: 0.5s;
+}
+
+.left-slide-in {
+    animation: left-slide-in 1s forwards;
+    -webkit-animation: left-slide-in 1s forwards;
+}
+
+@keyframes left-slide-in {
+    100% { transform: translateX(0%); }
+}
+
+@-webkit-keyframes left-slide-in {
+    100% { -webkit-transform: translateX(0%); }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+#rightSlider {
+    position: inherit;
+    transform: translateX(150%);
+    -webkit-transform: translateX(150%);
+    animation-delay: 0.25s;
+}
+
+td#hourlyOutput {
+    position: inherit;
+    transform: translateX(150%);
+    -webkit-transform: translateX(150%);
+    animation-delay: 0.75s;
+}
+
+.right-slide-in {
+    animation: right-slide-in 1s forwards;
+    -webkit-animation: right-slide-in 1s forwards;
+}
+
+@keyframes right-slide-in {
+    100% { transform: translateX(0%); }
+}
+
+@-webkit-keyframes right-slide-in {
+    100% { -webkit-transform: translateX(0%); }
+}
+
+
 /*! rangeslider.js - v2.3.0 | (c) 2016 @andreruffert | MIT license | https://github.com/andreruffert/rangeslider.js */
 .rangeslider,
 .rangeslider__fill {
@@ -93,6 +159,9 @@ output.currency::before {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
+  animation-delay: 3s;
+  animation: fadein 1s forwards;
+  -webkit-animation: fadein 3s forwards;
 }
 
 .rangeslider {
