--- a/assets/stylesheets/calculator.css
+++ b/assets/stylesheets/calculator.css
@@ -1,3 +1,4 @@
+/* This file is automatically saved into a minified version, which is used in production. */
 body {
   background: #8E2DE2;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
