--- a/assets/stylesheets/calculator.css
+++ b/assets/stylesheets/calculator.css
@@ -164,6 +164,33 @@ td#hourlyOutput {
     100% { -webkit-transform: translateX(0%); }
 }
 
+/* Corner ribbon */
+.corner-ribbon{
+  width: 200px;
+  background: #e43;
+  position: absolute;
+  top: 25px;
+  left: -50px;
+  text-align: center;
+  line-height: 50px;
+  letter-spacing: 1px;
+  color: #f0f0f0;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  font-size: x-large;
+}
+
+.corner-ribbon.sticky{
+  position: fixed;
+}
+.corner-ribbon.top-right{
+  top: 25px;
+  right: -50px;
+  left: auto;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+.corner-ribbon.blue{background: #39d;}
 
 /*! rangeslider.js - v2.3.0 | (c) 2016 @andreruffert | MIT license | https://github.com/andreruffert/rangeslider.js */
 .rangeslider,
